--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "node scripts/deploy.js",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "lottie-react": "^2.4.1",
